--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
-  }
+  },
+  "main": "webpack.config.js",
+  "keywords": []
 }
